# restic-backup

./: .dockerignore  Dockerfile  README.md  build-variants.json  config.example.yaml  pyproject.toml
.github/workflows/: docker-release.yml  integration-tests.yml  unit-tests.yml
src/restic_backup/: __init__.py  __main__.py  cli.py  container.py  logging_config.py
src/restic_backup/adapters/: config_yaml.py  database.py  filesystem.py  process.py  restic.py  telegram.py
src/restic_backup/application/: use_cases.py
src/restic_backup/domain/: models.py  ports.py
tests/: test_config_yaml.py  test_process_runner.py  test_restic_adapter.py  test_use_cases.py
tests/integration/: docker-compose.yaml  test_backup_restore_compose.py
